# faceit-ai-bot

./: .commitlintrc.json  .dockerignore  .editorconfig  .env.example  .env.github-pages  .env.production  .eslintrc.json  .gitignore  .markdownlintrc  .pre-commit-config.yaml  AI_INTEGRATION.md  AI_SETUP.md  API_TESTING.md  BUILD_DEPLOY.md  CHANGELOG.en.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_COMMANDS.md  CONTRIBUTING.en.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_PATTMSC_ONLINE.md  DEPLOY_REGRU.md  DEVELOPMENT.en.md  DEVELOPMENT.md  DOWNLOAD.md  Dockerfile  Dockerfile.api  Dockerfile.bot  Dockerfile.web  GITHUB_PROFILE_README.md  GITHUB_PROFILE_SETUP.md  ICONS_GUIDE.md  IMPROVEMENTS_SUMMARY.md  LICENSE  LICENSE.ru.md  Makefile  OPTIMIZATION_GUIDE.md  PWA_GUIDE.md  QUICK_START.md  (+55 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  actionlint.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  auto-assign.yml  basic.yml  build-frontend.yml  ci.yml  codeql.yml  dependency-check.yml  deploy-frontend.yml  deploy-to-vps.yml  main.yml  release.yml  stale.yml  test.yml  testing.yml  upload-to-website.yml
alembic/: env.py
alembic/versions/: 003_add_steam_id_to_users.py  004_add_teammate_contacts.py  005_add_last_login_to_users.py  006_add_user_sessions_table.py
app/: globals.css  layout.tsx  page.tsx  page_old.tsx
app/auth/: page.tsx
app/components/: PlayerAnalysis.tsx
app/contexts/: AuthContext.tsx
app/dashboard/: page.tsx
app/demo/: page.tsx
app/extension/: page.tsx
app/subscriptions/: page.tsx
app/teammates/: page.tsx
configs/: pro_players.json
data/: ai_samples.jsonl
deployment/systemd/: faceit-api.service
docs/: CNAME  README.md  index.en.html  index.html  index.md
docs/api/: README.md
examples/: README.md  basic_usage.py  fetch_player.js
extension/: faceit_content.js  popup.css  popup.js  steam_content.js
extension/src/: popup.tsx
k8s/base/: configmap.yml  deployment-api.yml  deployment-ollama.yml  ingress.yml  kustomization.yml  secret.yml
locales/: README.md
ml/: prepare_demo_coach_data.py
monitoring/alertmanager/: alertmanager.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: alerts-cache.yml  alerts-http-db-bots.yml  alerts-memory.yml  alerts-payments.yml  alerts-rate-limit.yml  prometheus.yml
nginx/: nginx.conf
public/: manifest.json  offline.html  security.txt  sitemap.xml  sw.js
releases/faceit-ai-bot-v0.1.0/: README.md  RELEASE_NOTES.md
releases/faceit-ai-bot-v0.2.0/: README.md  RELEASE_NOTES.md
scripts/: discord_bot.py  download_pro_demos.py  export_demo_coach_dataset.py  extract_pro_demo_features.py  fetch_pro_demos.py  init_db.py  setup-secrets.sh  telegram_bot.py  train.py
security/fail2ban/: jail-nginx-attack.conf  nginx-attack.conf
src/: health.py  logging_config.py  metrics.py  rate_limit.py  sentry_config.py
src/ai/: main.py
src/components/: AnalysisResultsChart.tsx  CaptchaWidget.tsx  DemoUpload.tsx  Navigation.tsx  NotificationSystem.tsx  SmartCaptchaWidget.tsx  TeammateChat.tsx  TurnstileWidget.tsx
src/config/: api.ts
src/contexts/: AuthContext.tsx
src/ml/: __init__.py
src/server/: dataCollector.js  database.js  database.py  exceptions.py  main.py  metrics_business.py  mlTraining.js  sitemap_routes.py
src/types/: declarations.d.ts  next-image.d.ts  next.d.ts
tests/: __init__.py  conftest.py  test_api.py  test_base.py  test_basic.py  test_integrations.py  test_main.py  test_ml.py  test_payments.py  test_player_analysis.py
tests/e2e/: test_auth_flow.py
tests/fixtures/: conftest.py
tests/integration/: conftest.py  test_auth_endpoints.py  (+8 more)
(+112 files in other folders)
